--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 baseurl: ""
 markdown: redcarpet
 redcarpet:
-    extensions: [tables]
+    extensions: ["no_intra_emphasis", "fenced_code_blocks", "autolink", "tables", "strikethrough", "superscript", "with_toc_data", "highlight", "prettify"]
 safe: false
 excerpt_separator: "\n\n\n"
 paginate: 5
