--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 baseurl: ""
-markdown: redcarpet
+markdown: kramdown
 redcarpet:
     extensions: ["no_intra_emphasis", "fenced_code_blocks", "autolink", "tables", "strikethrough", "superscript", "with_toc_data", "highlight", "prettify"]
 safe: false
